parse new field for additional info on models
